--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>JavaScript 数字方法</h1>
+
+<p>toPrecision() 方法返回一个字符串，其中包含一个用指定长度写的数字：</p>
+
+<p id="demo"></p>
+
+<script>
+
+var a = document.createElement('a');
+a.innerHTML = "Download File";
+a.href = "data:application/octet-stream,"+encodeURIComponent("My DATA");
+a.download = 'abc.txt';
+document.body.appendChild(a);
+//a.click();
+
+</script>
+
+</body>
+</html>
